--- a/website/index.html
+++ b/website/index.html
@@ -68,7 +68,13 @@
 		</div>
 
 		<div class="cross">
-		<li><div class="icon-menu"><button class="burger"></button></div></li>
+		<li><div class="icon-menu">
+						<div class="bar1"></div>
+						<div class="bar2"></div>
+						<div class="bar3"></div>
+					  </div>	
+		
+		</li>
 	</div>
 
 	</ul>
@@ -97,8 +103,14 @@
 		<li><a class="hvr-underline-from-none">416-464-6573</a></li>
 </div>
 
-		<div class="cross">
-		<li><div class="icon-menuBottom"><button class="burger"></button></div></li>
+<div class="cross">
+		<li><div class="icon-menuBottom">
+						<div class="bar1"></div>
+						<div class="bar2"></div>
+						<div class="bar3"></div>
+					  </div>	
+		
+		</li>
 	</div>
 	</ul>
 
