--- a/website/index.html
+++ b/website/index.html
@@ -14,10 +14,10 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="./css/hover.css"> 
-    <link rel="stylesheet" type="text/css" href="./css/styles.css">
-	<link rel="icon" href="./images/favicon.ico" type="image/x-icon">
-	<script src="./js/jquery.color.js"></script>
+	<link rel="stylesheet" type="text/css" href="http://fivestarmedia.com/css/hover.css"> 
+    <link rel="stylesheet" type="text/css" href="http://fivestarmedia.com/css/styles.css">
+	<link rel="icon" href="http://fivestarmedia.com/images/favicon.ico" type="image/x-icon">
+	<script src="http://fivestarmedia.com/js/jquery.color.js"></script>
 </head>
 
 <body>
