--- a/website/index.html
+++ b/website/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Welcome to Fivestar Media</title>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
@@ -11,13 +11,13 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="default">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="http://fivestarmedia.com/css/hover.css"> 
-    <link rel="stylesheet" type="text/css" href="http://fivestarmedia.com/css/styles.css">
-	<link rel="icon" href="http://fivestarmedia.com/images/favicon.ico" type="image/x-icon">
-	<script src="http://fivestarmedia.com/js/jquery.color.js"></script>
+	<script charset="utf-8" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+	<link charset="utf-8" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script charset="utf-8" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<link charset="utf-8" rel="stylesheet" type="text/css" href="./css/hover.css"> 
+    <link charset="utf-8" rel="stylesheet" type="text/css" href="./css/styles.css">
+	<link charset="utf-8" rel="icon" href="./images/favicon.ico" type="image/x-icon">
+	<script charset="utf-8" src="./js/jquery.color.js"></script>
 </head>
 
 <body>
@@ -271,8 +271,8 @@
 		</div>
 	</div>
 
-	<script src="./js/scripts.js"></script>
-    <script async defer
+	<script charset="utf-8" src="./js/scripts.js"></script>
+    <script charset="utf-8" async defer
     src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyBADGObWqRT173c7GYHmDc0BpJ4zECy1_A&callback=initMap">
     </script>
 </body>
