update Aug. 28, 2017 10:55pm

--- a/website/index.html
+++ b/website/index.html
@@ -11,13 +11,13 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="default">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="./css/hover.css"> 
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
 	<link rel="icon" href="./images/favicon.ico" type="image/x-icon">
-	<script src="./js/jquery.color.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,6 @@
             <div class="serviceText"><p class="toUpper">Search Engine Optimization</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p><a href="#">Portfolio and Pricing</a></div>
         </div>
 
-
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
             <div class="serviceIcon">
 				<img class="img-responsive circular--square" src="./images/digital-marketing.png">
@@ -183,8 +182,10 @@
         <h1 class="toUpper">Need help? Feel free to contact us at 416-464-6573</h1>
     </div>
 
-<div class="locations clearfix">
 
+<div class="locations clearfix">
+<div class="container-fluid">
+	<div class="row">
 	<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 footerText">
 		<p>Brampton Main Office</p>
 
@@ -233,8 +234,9 @@
 		<p>Mississauga, ON</p>
 		<p>L4V 1W1, Canada</p>
 	</div>
-
+	</div>
 </div>
+	</div>
 
 	<div class= "footerBanner">
 		<div class="footerImage">
