--- a/website/index.html
+++ b/website/index.html
@@ -93,9 +93,9 @@
 						<li><a href="/" class="hvr-underline-from-left">Websites</a></li>
 						<li><a href="/" class="hvr-underline-from-left">SEO</a></li>
 						<li><a href="/" class="hvr-underline-from-left">Digital Marketing</a></li>
-						<li><a href="/" class="hvr-underline-from-left">Logo Design</a></li>
+						<!-- <li><a href="/" class="hvr-underline-from-left">Logo Design</a></li>
 						<li><a href="/" class="hvr-underline-from-left">Graphics Design</a></li>
-						<li><a href="/" class="hvr-underline-from-left">E-Commerce</a></li>
+						<li><a href="/" class="hvr-underline-from-left">E-Commerce</a></li> -->
 					</ul>
 
 				</li>
@@ -137,7 +137,7 @@
 		<div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
 				<div class="serviceIcon">
-					<img class="img-responsive circular--square" src="./images/website-design.png">
+					<img class="img-responsive circular--square" src="./images/website-design.jpg">
 				</div>
 				<div class="serviceText">
 					<p class="toUpper">Websites</p>
@@ -149,7 +149,7 @@
 
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
 				<div class="serviceIcon">
-					<img class="img-responsive circular--square" src="./images/search-engine-optimization.png">
+					<img class="img-responsive circular--square" src="./images/search-engine-optimization.jpg">
 				</div>
 				<div class="serviceText">
 					<p class="toUpper">Search Engine Optimization</p>
@@ -161,7 +161,7 @@
 
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
 				<div class="serviceIcon">
-					<img class="img-responsive circular--square" src="./images/digital-marketing.png">
+					<img class="img-responsive circular--square" src="./images/digital-marketing.jpg">
 				</div>
 				<div class="serviceText">
 					<p class="toUpper">Digital Marketing</p>
