--- a/website/index.html
+++ b/website/index.html
@@ -14,10 +14,8 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-	    crossorigin="anonymous">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-	    crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="./css/hover.css">
 	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 	<link rel="icon" href="./images/favicon.ico" type="image/x-icon">
@@ -204,9 +202,9 @@
 	</div>
 
 
-	<div class="locations clearfix">
+	<!-- <div class="locations clearfix"> -->
 		<div class="container-fluid">
-			<div class="row">
+			<div class="row locations">
 				<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 footerText">
 					<p>Brampton Main Office</p>
 
@@ -257,7 +255,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	<!-- </div> -->
 
 	<div class="footerBanner">
 		<div class="footerImage">
