--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@ permalink: /home/
 
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
 				<div class="serviceIcon">
-					<img class="img-responsive circular--square" src="{{ site.baseurl }}images/digital-marketing.jpg">
+					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/digital-marketing.jpg">
 				</div>
 				<div class="serviceText">
 					<p class="toUpper">Digital Marketing</p>
@@ -61,21 +61,21 @@ permalink: /home/
 		<!-- <div class="row">
 		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
 			<div class="serviceIcon">
-				<img class="img-responsive circular--square" src="{{ site.baseurl }}images/ecommerce-website-2.png">
+				<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/ecommerce-website-2.png">
 			</div>
 			<div class="serviceText"><p class="toUpper">E-Commerce Websites</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p><a href="#">Portfolio and Pricing</a></div>
 		</div>
 
 		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
 			<div class="serviceIcon">
-				<img class="img-responsive circular--square" src="{{ site.baseurl }}images/logo-design.png">
+				<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/logo-design.png">
 			</div>
 			<div class="serviceText"><p class="toUpper">Logo Design</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p><a href="#">Portfolio and Pricing</a></div>
 		</div>
 
 		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
 			<div class="serviceIcon">
-				<img class="img-responsive circular--square" src="{{ site.baseurl }}images/graphic-design.png">
+				<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/graphic-design.png">
 			</div>
 			<div class="serviceText"><p class="toUpper">Graphics Design</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p><a href="#">Portfolio and Pricing</a></div>
 		</div>
@@ -95,7 +95,7 @@ permalink: /home/
 				<p>Brampton Main Office</p>
 
 				<div class="blockImg">
-					<img src="{{ site.baseurl }}images/brampton.jpg">
+					<img src="{{ site.baseurl }}/images/brampton.jpg">
 				</div>
 
 				<p>2 County Court Blvd., Suite 400</p>
@@ -108,7 +108,7 @@ permalink: /home/
 				<p>Toronto - Yonge & Bloor</p>
 
 				<div class="blockImg">
-					<img src="{{ site.baseurl }}images/toronto.jpg">
+					<img src="{{ site.baseurl }}/images/toronto.jpg">
 				</div>
 
 				<p>2 Bloor West, Suite 700</p>
@@ -120,7 +120,7 @@ permalink: /home/
 				<p>Toronto - Yonge & Sheppard</p>
 
 				<div class="blockImg">
-					<img src="{{ site.baseurl }}images/sheppard.jpg">
+					<img src="{{ site.baseurl }}/images/sheppard.jpg">
 				</div>
 
 				<p>4711 Yonge Street, 10th Floor</p>
@@ -132,7 +132,7 @@ permalink: /home/
 				<p>Mississauga Office</p>
 
 				<div class="blockImg">
-					<img src="{{ site.baseurl }}images/mississauga.jpg">
+					<img src="{{ site.baseurl }}/images/mississauga.jpg">
 				</div>
 
 				<p>5925 Airport Road, Suite 200</p>
@@ -144,39 +144,39 @@ permalink: /home/
 
 	<div class="footerBanner">
 		<div class="footerImage">
-			<img src="{{ site.baseurl }}images/company1.jpg">
+			<img src="{{ site.baseurl }}/images/company1.jpg">
 		</div>
 
 		<div class="footerImage">
-			<img src="{{ site.baseurl }}images/company2.png">
+			<img src="{{ site.baseurl }}/images/company2.png">
 		</div>
 
 		<div class="footerImage">
-			<img src="{{ site.baseurl }}images/company6.jpg">
+			<img src="{{ site.baseurl }}/images/company6.jpg">
 		</div>
 
 		<div class="footerImage">
-			<img src="{{ site.baseurl }}images/company5.jpg">
+			<img src="{{ site.baseurl }}/images/company5.jpg">
 		</div>
 
 		<div class="footerImage">
-			<img src="{{ site.baseurl }}images/company3.png">
+			<img src="{{ site.baseurl }}/images/company3.png">
 		</div>
 
 		<div class="footerImage">
-			<img src="{{ site.baseurl }}images/company7.jpg">
+			<img src="{{ site.baseurl }}/images/company7.jpg">
 		</div>
 
 		<div class="footerImage">
-			<img src="{{ site.baseurl }}images/company8.jpg">
+			<img src="{{ site.baseurl }}/images/company8.jpg">
 		</div>
 
 		<div class="footerImage">
-			<img src="{{ site.baseurl }}images/company9.jpg">
+			<img src="{{ site.baseurl }}/images/company9.jpg">
 		</div>
 	</div>
 
-	<script src="{{ site.baseurl }}js/scripts.js"></script>
+	<script src="{{ site.baseurl }}/js/scripts.js"></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyBADGObWqRT173c7GYHmDc0BpJ4zECy1_A&callback=initMap">
 	</script>
 </body>
