--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@ permalink: /home/
 		<div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
 				<div class="serviceIcon">
-					<img class="img-responsive circular--square" src={{ "images/website-design.jpg" | absolute_url }}>
+					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/website-design.jpg">
 				</div>
 				<div class="serviceText">
 					<p class="toUpper">Websites</p>
