--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         history.go(-1);
         if (pass1.toLowerCase() == "letmein") {
         alert('You Got it Right!');
-        window.open('./home/index.html');
+        window.open('./home/');
         break;
         } 
         testV+=1;
