--- a/website-design.html
+++ b/website-design.html
@@ -1,13 +1,14 @@
 ---
 layout: page
 title: Website Design
-permalink: "/website-design/"
+permalink: /website-design/
 ---
+
 <body>
 
 	{% include menu.html %}
 
-	<div class="jumbotron homePage"></div>
+	<div class="jumbotron websiteDesignBackground"></div>
 
 	<div class="banner">
 		<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit esse vero facilis commodi molestiae cum odit placeat
