--- a/search-engine-optimization.html
+++ b/search-engine-optimization.html
@@ -1,18 +1,18 @@
 ---
 layout: page
-title: Brampton Website Design, Search Engine Optimization and Digital Marketing
-permalink: /home/
+title: Search Engine Optimization
+permalink: /seo/
 ---
 
 <body>
 
 	{% include menu.html %}
 
-	<div class="jumbotron home-background"></div>
+	<div class="jumbotron seo-background"></div>
 
 	<div class="banner">
-		<p class="bannerText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit esse vero facilis commodi molestiae cum odit placeat
-			sit sunt suscipit nostrum ab distinctio, iure voluptatum. Dolorum recusandae soluta, officiis in.</p>
+		<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit esse vero facilis commodi molestiae cum odit placeat
+			sit sunt suscipit nostrum ab distinctio, iure voluptatum. Dolorum recusandae soluta, officiis in.</h2>
 	</div>
 
 	<div class="container-fluid">
@@ -31,7 +31,7 @@ permalink: /home/
 				<div class="serviceText">
 					<p class="toUpper">Websites</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p>
-					<p class="bolder">Learn More</p>
+					<a href="#">Portfolio and Pricing</a>
 				</div>
 			</div>
 
@@ -42,7 +42,7 @@ permalink: /home/
 				<div class="serviceText">
 					<p class="toUpper">Search Engine Optimization</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p>
-					<p class="bolder" href="#">Learn More</p>
+					<a href="#">Portfolio and Pricing</a>
 				</div>
 			</div>
 
@@ -53,7 +53,7 @@ permalink: /home/
 				<div class="serviceText">
 					<p class="toUpper">Digital Marketing</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p>
-					<p class="bolder" href="#">Learn More</p>
+					<a href="#">Portfolio and Pricing</a>
 				</div>
 			</div>
 		</div>
