--- a/home.html
+++ b/home.html
@@ -16,14 +16,18 @@ permalink: /home/
 	</div>
 
 	<div class="body-container">
+		<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 serviceHeading">
 			<h1 class="toUpper">Our Services</h1>
 			<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
 				est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
 		</div>
+	</div>
+		<div class="row eqHeight">
 
-		<div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
+					<a href="#">
+				<div class="serviceContainer">
 				<div class="serviceIcon">
 					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/website-design.jpg">
 				</div>
@@ -33,8 +37,13 @@ permalink: /home/
 					<p class="bolder">Learn More</p>
 				</div>
 			</div>
+		</a>
+		</div>
+
 
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
+					<a href="#">
+				<div class="serviceContainer">
 				<div class="serviceIcon">
 					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/search-engine-optimization.jpg">
 				</div>
@@ -44,9 +53,14 @@ permalink: /home/
 					<p class="bolder" href="#">Learn More</p>
 				</div>
 			</div>
+		</a>
+		</div>
 
-			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-				<div class="serviceIcon">
+
+		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
+				<a href="#">	
+			<div class="serviceContainer">
+			<div class="serviceIcon">
 					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/digital-marketing.jpg">
 				</div>
 				<div class="serviceText">
@@ -55,6 +69,9 @@ permalink: /home/
 					<p class="bolder" href="#">Learn More</p>
 				</div>
 			</div>
+		</a>
+		</div>
+
 		</div>
 	</div>
 
