--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@ permalink: /home/
 	<div class="body-container">
 		<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 serviceHeading">
-			<h1 class="toUpper">Our Services</h1>
+			<h1 class="toUpper bold">Our Services</h1>
 			<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
 				est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
 		</div>
@@ -32,9 +32,9 @@ permalink: /home/
 					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/website-design.jpg">
 				</div>
 				<div class="serviceText">
-					<p class="toUpper">Websites</p>
+					<p class="toUpper bold">Websites</p>
 					<p>Your website is your company's first impression, so make it the best.</p>
-					<p class="bolder">Learn More</p>
+					<p class="serviceLink bold">Learn More</p>
 				</div>
 			</div>
 		</a>
@@ -48,9 +48,9 @@ permalink: /home/
 					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/search-engine-optimization.jpg">
 				</div>
 				<div class="serviceText">
-					<p class="toUpper">Search Engine Optimization</p>
-					<p>Bring more customers to your website by making it rank higher in search engines.</p>
-					<p class="bolder" href="#">Learn More</p>
+					<p class="toUpper bold">Search Engine Optimization</p>
+					<p>Bring more people to your website by making it rank higher in search engines.</p>
+					<p class="serviceLink bold">Learn More</p>
 				</div>
 			</div>
 		</a>
@@ -64,9 +64,9 @@ permalink: /home/
 					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/digital-marketing.jpg">
 				</div>
 				<div class="serviceText">
-					<p class="toUpper">Digital Marketing</p>
+					<p class="toUpper bold">Digital Marketing</p>
 					<p>Your website is your company's first impression, so make it the best.</p>
-					<p class="bolder" href="#">Learn More</p>
+					<p class="serviceLink bold">Learn More</p>
 				</div>
 			</div>
 		</a>
