--- a/home.html
+++ b/home.html
@@ -26,15 +26,17 @@ permalink: /home/
 		<div class="row eqHeight">
 
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-					<a href="#">
+
 				<div class="serviceContainer">
 				<div class="serviceIcon">
+						<a href="#">
 					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/website-design.jpg">
+						</a>
 				</div>
 				<div class="serviceText">
-					<p class="toUpper bold">Websites</p>
-					<p>Your website is your company's first impression, so make it the best.</p>
-					<p class="serviceLink bold">Learn More</p>
+					<p class="toUpper bold"><a href="#">Website Development</a></p>
+					<p><a href="#">Your website is your company's first impression, so make it the best.</a></p>
+					<p class="serviceLink bold"><a href="#">Learn More</a></p>
 				</div>
 			</div>
 		</a>
@@ -42,34 +44,38 @@ permalink: /home/
 
 
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-					<a href="#">
+
 				<div class="serviceContainer">
 				<div class="serviceIcon">
+						<a href="#">
 					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/search-engine-optimization.jpg">
+						</a>
 				</div>
 				<div class="serviceText">
-					<p class="toUpper bold">Search Engine Optimization</p>
-					<p>Bring more people to your website by making it rank higher in search engines.</p>
-					<p class="serviceLink bold">Learn More</p>
+					<p class="toUpper bold"><a href="#">Search Engine Optimization</a></p>
+					<p><a href="#">Bring more people to your website by making it rank higher in search engines.</a></p>
+					<p class="serviceLink bold"><a href="#">Learn More</a></p>
 				</div>
 			</div>
-		</a>
+
 		</div>
 
 
 		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-				<a href="#">	
+
 			<div class="serviceContainer">
 			<div class="serviceIcon">
-					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/digital-marketing.jpg">
-				</div>
+					<a href="#">
+				<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/digital-marketing.jpg">
+				<a href="#">	
+			</div>
 				<div class="serviceText">
-					<p class="toUpper bold">Digital Marketing</p>
-					<p>Your website is your company's first impression, so make it the best.</p>
-					<p class="serviceLink bold">Learn More</p>
+					<p class="toUpper bold"><a href="#">Digital Marketing</a></p>
+					<p><a href="#">Your website is your company's first impression, so make it the best.</a></p>
+					<p class="serviceLink bold"><a href="#">Learn More</a></p>
 				</div>
 			</div>
-		</a>
+
 		</div>
 
 		</div>
