--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Brampton Website Design, Search Engine Optimization and Digital Marketing
+title: Brampton Vaughan Website Design, Search Engine Optimization and Digital Marketing
 permalink: /home/
 ---
 
