--- a/home.html
+++ b/home.html
@@ -17,66 +17,57 @@ permalink: /home/
 
 	<div class="body-container">
 		<div class="row">
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 serviceHeading">
-			<h1 class="toUpper bold">Our Services</h1>
-			<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
-				est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 serviceHeading">
+				<h1 class="toUpper bold">Our Services</h1>
+				<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
+					est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
+			</div>
 		</div>
-	</div>
 		<div class="row eqHeight">
-
+			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
+				<div class="serviceContainer">
+					<div class="serviceIcon">
+						<a href="#">
+							<img class="circular--square" src="{{ site.baseurl }}/images/website-design.jpg">
+						</a>
+					</div>
+					<div class="serviceText">
+						<p class="toUpper bold"><a href="#">Website Development</a></p>
+						<p><a href="#">Your website is your company's first impression, so make it the best.</a></p>
+						<p class="serviceLink bold"><a href="#">Learn More</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
+				<div class="serviceContainer">
+					<div class="serviceIcon">
+						<a href="#">
+							<img class="circular--square" src="{{ site.baseurl }}/images/search-engine-optimization.jpg">
+						</a>
+					</div>
+					<div class="serviceText">
+						<p class="toUpper bold"><a href="#">Search Engine Optimization</a></p>
+						<p><a href="#">Bring more people to your website by making it rank higher in search engines.</a></p>
+						<p class="serviceLink bold"><a href="#">Learn More</a></p>
+					</div>
+				</div>
+			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
 
 				<div class="serviceContainer">
-				<div class="serviceIcon">
+					<div class="serviceIcon">
 						<a href="#">
-					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/website-design.jpg">
-						</a>
-				</div>
-				<div class="serviceText">
-					<p class="toUpper bold"><a href="#">Website Development</a></p>
-					<p><a href="#">Your website is your company's first impression, so make it the best.</a></p>
-					<p class="serviceLink bold"><a href="#">Learn More</a></p>
-				</div>
-			</div>
-		</a>
-		</div>
-
-
-			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-
-				<div class="serviceContainer">
-				<div class="serviceIcon">
-						<a href="#">
-					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/search-engine-optimization.jpg">
-						</a>
-				</div>
-				<div class="serviceText">
-					<p class="toUpper bold"><a href="#">Search Engine Optimization</a></p>
-					<p><a href="#">Bring more people to your website by making it rank higher in search engines.</a></p>
-					<p class="serviceLink bold"><a href="#">Learn More</a></p>
-				</div>
-			</div>
-
-		</div>
-
-
-		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-
-			<div class="serviceContainer">
-			<div class="serviceIcon">
-					<a href="#">
-				<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/digital-marketing.jpg">
-				<a href="#">	
-			</div>
+							<img class="circular--square" src="{{ site.baseurl }}/images/digital-marketing.jpg">
+						</a>	
+					</div>
 				<div class="serviceText">
 					<p class="toUpper bold"><a href="#">Digital Marketing</a></p>
-					<p><a href="#">Your website is your company's first impression, so make it the best.</a></p>
-					<p class="serviceLink bold"><a href="#">Learn More</a></p>
+						<p><a href="#">Your website is your company's first impression, so make it the best.</a></p>
+						<p class="serviceLink bold"><a href="#">Learn More</a></p>
+					</div>
 				</div>
-			</div>
 
-		</div>
+			</div>
 
 		</div>
 	</div>
