--- a/search-engine-optimization.html
+++ b/search-engine-optimization.html
@@ -1,90 +1,75 @@
 ---
 layout: page
-title: Search Engine Optimization
+title: Brampton Vaughan Website Design, Search Engine Optimization and Digital Marketing
 permalink: /seo/
 ---
 
 <body>
-
 	{% include menu.html %}
-
-	<div class="jumbotron seo-background"></div>
+	<div class="jumbotron home-background"></div>
 
 	<div class="banner">
 		<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit esse vero facilis commodi molestiae cum odit placeat
 			sit sunt suscipit nostrum ab distinctio, iure voluptatum. Dolorum recusandae soluta, officiis in.</h2>
 	</div>
 
-	<div class="container-fluid">
-
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 serviceHeading">
-			<h3 class="toUpper">Our Services</h3>
-			<h4>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
-				est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa?</h4>
-		</div>
-
+	<div class="body-container">
 		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 serviceHeading">
+				<h1 class="toUpper bold">Our Services</h1>
+				<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
+					est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
+			</div>
+		</div>
+		<div class="row eqHeight">
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-				<div class="serviceIcon">
-					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/website-design.jpg">
-				</div>
-				<div class="serviceText">
-					<p class="toUpper">Websites</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p>
-					<a href="#">Portfolio and Pricing</a>
+				<div class="serviceContainer">
+					<div class="serviceIcon">
+						<a href="#">
+							<img class="circular--square" src="{{ site.baseurl }}/images/website-design.jpg">
+						</a>
+					</div>
+					<div class="serviceText">
+						<p class="toUpper bold"><a href="#">Website Development</a></p>
+						<p><a href="#">Your website is your company's first impression, so make it the best.</a></p>
+						<p class="serviceLink bold"><a href="#">Learn More</a></p>
+					</div>
 				</div>
 			</div>
-
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-				<div class="serviceIcon">
-					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/search-engine-optimization.jpg">
-				</div>
-				<div class="serviceText">
-					<p class="toUpper">Search Engine Optimization</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p>
-					<a href="#">Portfolio and Pricing</a>
+				<div class="serviceContainer">
+					<div class="serviceIcon">
+						<a href="#">
+							<img class="circular--square" src="{{ site.baseurl }}/images/search-engine-optimization.jpg">
+						</a>
+					</div>
+					<div class="serviceText">
+						<p class="toUpper bold"><a href="#">Search Engine Optimization</a></p>
+						<p><a href="#">Bring more people to your website by making it rank higher in search engines.</a></p>
+						<p class="serviceLink bold"><a href="#">Learn More</a></p>
+					</div>
 				</div>
 			</div>
-
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-				<div class="serviceIcon">
-					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/digital-marketing.jpg">
-				</div>
+
+				<div class="serviceContainer">
+					<div class="serviceIcon">
+						<a href="#">
+							<img class="circular--square" src="{{ site.baseurl }}/images/digital-marketing.jpg">
+						</a>	
+					</div>
 				<div class="serviceText">
-					<p class="toUpper">Digital Marketing</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p>
-					<a href="#">Portfolio and Pricing</a>
+					<p class="toUpper bold"><a href="#">Digital Marketing</a></p>
+						<p><a href="#">Your website is your company's first impression, so make it the best.</a></p>
+						<p class="serviceLink bold"><a href="#">Learn More</a></p>
+					</div>
 				</div>
-			</div>
-		</div>
 
-		<!-- <div class="row">
-		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-			<div class="serviceIcon">
-				<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/ecommerce-website-2.png">
 			</div>
-			<div class="serviceText"><p class="toUpper">E-Commerce Websites</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p><a href="#">Portfolio and Pricing</a></div>
-		</div>
 
-		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-			<div class="serviceIcon">
-				<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/logo-design.png">
-			</div>
-			<div class="serviceText"><p class="toUpper">Logo Design</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p><a href="#">Portfolio and Pricing</a></div>
 		</div>
-
-		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-			<div class="serviceIcon">
-				<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/graphic-design.png">
-			</div>
-			<div class="serviceText"><p class="toUpper">Graphics Design</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p><a href="#">Portfolio and Pricing</a></div>
-		</div>
-	</div> -->
-
 	</div>
-
 	{% include footer.html %}
-
 </body>
 
 </html>
