--- a/website-design.html
+++ b/website-design.html
@@ -1,90 +1,187 @@
 ---
 layout: page
-title: Website Design
+title: Brampton Vaughan Website Design, Search Engine Optimization and Digital Marketing
 permalink: /website-design/
 ---
 
 <body>
-
 	{% include menu.html %}
-
 	<div class="jumbotron website-design-background"></div>
 
-	<div class="banner">
+	<!-- <div class="banner">
 		<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit esse vero facilis commodi molestiae cum odit placeat
 			sit sunt suscipit nostrum ab distinctio, iure voluptatum. Dolorum recusandae soluta, officiis in.</h2>
-	</div>
+	</div> -->
 
-	<div class="container-fluid">
+	<div class="body-container">
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 serviceHeading">
+				<h1 class="toUpper bold">Website Design</h1>
+				<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
+					est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa? ipsum dolor sit amet, consectetur
+					adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus, est unde numquam dignissimos,
+					nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
+			</div>
+		</div>
 
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 serviceHeading">
-			<h3 class="toUpper">Our Services</h3>
-			<h4>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
-				est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa?</h4>
+		<div class="row eqHeight greybg">
+			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 featuresPadding">
+				<div class="featuresImg">
+				<img src="{{ site.baseurl }}/images/brampton.jpg">
+			</div>
+			</div>
+			<div class="col-lg-6 col-md-6 col-sm-12 featuresPadding col-xs-12">
+				<div class="serviceDetail">
+					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
+					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
+						first impression, so make it the best.</p>
+					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
+						first impression, so make it the best.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="row eqHeight greyerbg">
+			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 featuresPadding">
+				<div class="featuresImg">
+				<img src="{{ site.baseurl }}/images/brampton.jpg">
+			</div></div>
+			<div class="col-lg-6 col-md-6 col-sm-12 featuresPadding col-xs-12">
+				<div class="serviceDetail">
+					<p class="toUpper bold serviceTextBox">Mobile Responsive</p>
+					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
+						first impression, so make it the best.</p>
+					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
+						first impression, so make it the best.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="row eqHeight greybg">
+			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 featuresPadding">
+				<div class="featuresImg">
+				<img src="{{ site.baseurl }}/images/brampton.jpg">
+			</div>	
+			</div>
+			<div class="col-lg-6 col-md-6 col-sm-12 featuresPadding col-xs-12">
+				<div class="serviceDetail">
+					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
+					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
+						first impression, so make it the best.</p>
+					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
+						first impression, so make it the best.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="row eqHeight greyerbg">
+			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 featuresPadding">
+				<div class="featuresImg">
+				<img src="{{ site.baseurl }}/images/brampton.jpg">
+			</div>	
+			</div>
+			<div class="col-lg-6 col-md-6 col-sm-12 featuresPadding col-xs-12">
+				<div class="serviceDetail">
+					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
+					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
+						first impression, so make it the best.</p>
+					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
+						first impression, so make it the best.</p>
+				</div>
+			</div>
 		</div>
 
 		<div class="row">
-			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-				<div class="serviceIcon">
-					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/website-design.jpg">
-				</div>
-				<div class="serviceText">
-					<p class="toUpper">Websites</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p>
-					<a href="#">Portfolio and Pricing</a>
-				</div>
-			</div>
-
-			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-				<div class="serviceIcon">
-					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/search-engine-optimization.jpg">
-				</div>
-				<div class="serviceText">
-					<p class="toUpper">Search Engine Optimization</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p>
-					<a href="#">Portfolio and Pricing</a>
-				</div>
-			</div>
-
-			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-				<div class="serviceIcon">
-					<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/digital-marketing.jpg">
-				</div>
-				<div class="serviceText">
-					<p class="toUpper">Digital Marketing</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p>
-					<a href="#">Portfolio and Pricing</a>
-				</div>
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 serviceHeading">
+				<h1 class="toUpper bold">Website Prices</h1>
+				<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
+					est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa? ipsum dolor sit amet, consectetur
+					adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus, est unde numquam dignissimos,
+					nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
 			</div>
 		</div>
 
-		<!-- <div class="row">
-		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-			<div class="serviceIcon">
-				<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/ecommerce-website-2.png">
+		<div class="row eqHeight greyerbg featuresContainer">
+			<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 features">
+				<ul>
+					<h2 class="toUpper bold">Template</h2>
+					<h2 class="toUpper bold">$700</h2>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+				</ul>
 			</div>
-			<div class="serviceText"><p class="toUpper">E-Commerce Websites</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p><a href="#">Portfolio and Pricing</a></div>
-		</div>
 
-		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-			<div class="serviceIcon">
-				<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/logo-design.png">
+			<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 features">
+				<ul>
+					<h2 class="toUpper bold">Template+</h2>
+					<h2 class="toUpper bold">$700</h2>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+				</ul>
 			</div>
-			<div class="serviceText"><p class="toUpper">Logo Design</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p><a href="#">Portfolio and Pricing</a></div>
-		</div>
 
-		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-			<div class="serviceIcon">
-				<img class="img-responsive circular--square" src="{{ site.baseurl }}/images/graphic-design.png">
+			<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 features">
+				<ul>
+					<h2 class="toUpper bold">Custom</h2>
+					<h2 class="toUpper bold">$700</h2>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+				</ul>
 			</div>
-			<div class="serviceText"><p class="toUpper">Graphics Design</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eaque minima, harum dolorum obcaecati excepturi.</p><a href="#">Portfolio and Pricing</a></div>
-		</div>
-	</div> -->
 
+			<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 features">
+				<ul>
+					<h2 class="toUpper bold">Enterprise</h2>
+					<h2 class="toUpper bold">$700</h2>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+					<li>ABC</li>
+				</ul>
+			</div>
+		</div>
 	</div>
-
-	{% include footer.html %}
-
+	{% include footermapless.html %}
 </body>
 
 </html>
