--- a/seo.html
+++ b/seo.html
@@ -1,16 +1,16 @@
 ---
 layout: page
 title: Brampton Vaughan Website Design, Search Engine Optimization and Digital Marketing
-permalink: /digital-marketing/
+permalink: /seo/
 ---
 
 <body>
 	{% include menu.html %}
-	<div class="jumbotron digital-marketing-background"></div>
+	<div class="jumbotron seo-background"></div>
 
 
 	<div class="banner">
-		<h2>Bring massive traffic to your website.</h2>
+		<h2>For your website to reach high in search engines, it must be designed to reach higher.</h2>
 	</div>
 
 	
